Add shadow info (hp, sp, exp, and yen) to shadow view

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
@@ -18,6 +18,28 @@
     </div>
 
     <div>
+        <h3 class="col-md-12 text-align-center">Info</h3>
+        <table class="col-md-8 col-md-offset-2 col-sm-12">
+            <thead>
+                <tr>
+                    <th class="text-align-center slim-column">HP</th>
+                    <th class="text-align-center slim-column">SP</th>
+                    <th class="text-align-center slim-column">Money</th>
+                    <th class="text-align-center slim-column">Experience</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="text-align-center">@shadow.HP</td>
+                    <td class="text-align-center">@shadow.SP</td>
+                    <td class="text-align-center">@shadow.Yen</td>
+                    <td class="text-align-center">@shadow.Exp</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div>
         <h3 class="col-md-12 text-align-center">Stats</h3>
         <table class="col-md-8 col-md-offset-2 col-sm-12">
             <thead>
