Increase font size for easier mobile reading

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
@@ -7,7 +7,7 @@
             <tr>
                 <th class="extra-slim-column text-align-center">Number</th>
                 <th>Title</th>
-                <th class="text-align-center">Quest Giver</th>
+                <th class="slim-column text-align-center">Quest Giver</th>
                 <th class="text-align-center">Location</th>
                 <th class="slim-column text-align-center">Available</th>
                 <th class="text-align-center">Prerequisities</th>
