--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -69,6 +69,7 @@
 /* Site wide tag styling */
 body {
     font-family: 'Roboto', sans-serif;
+    font-size: 18px;
     background-color: #121212;
     color: #c5c1b9;
 }
@@ -97,10 +98,12 @@ table {
         top: -1px;
         border: none;
         padding: 7px !important;
+        font-size: 18px;
     }
 
     table td {
         padding: 5px 7px !important;
+        font-size: 18px;
     }
 
     table tr {
