--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
@@ -8,7 +8,7 @@
                 <th class="col-md-1 text-align-center">Available</th>
                 <th class="col-md-2">Title</th>
                 <th>How to Obtain</th>
-                <th class="col-md-3">Effect</th>
+                <th class="col-md-3 mobile-hidden">Effect</th>
             </tr>
         </thead>
         <tbody>
@@ -18,7 +18,7 @@
                     <td class="text-align-center">@book.DateAvailable</td>
                     <td class="text-bright">@book.Title</td>
                     <td class="white-space-pre-line">@book.Requirement</td>
-                    <td>@book.Effect</td>
+                    <td class="mobile-hidden">@book.Effect</td>
                 </tr>
             }
         </tbody>
