--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
@@ -40,7 +40,7 @@
 
 <div>
     <h3 class="col-md-12 text-align-center">Elements</h3>
-    <table class="col-md-8 col-md-offset-2 col-sm-12">
+    <table class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
         <thead>
             <tr>
                 <th class="text-align-center slim-column"><img src="~/img/Physical.png" alt="Physical" /></th>
