--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -240,3 +240,10 @@ table {
     color: #16ce3c;
     font-weight: bold;
 }
+
+/* Mobile-hidden styling */
+@media (max-width: 768px) {
+    .mobile-hidden {
+        display: none;
+    }
+}
