--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
@@ -8,7 +8,7 @@
                 <th>Name</th>
                 <th>Effect</th>
                 <th class="text-align-center">Price</th>
-                <th>How to Obatin</th>
+                <th class="mobile-hidden">How to Obatin</th>
             </tr>
         </thead>
         @foreach (var accessory in Model.Accessories)
@@ -25,7 +25,7 @@
                         }
 
                         <td class="text-align-center">@(obtain.Price == "" ? "-" : obtain.Price)</td>
-                        <td>@obtain.Obtain</td>
+                        <td class="mobile-hidden">@obtain.Obtain</td>
                     </tr>
                 }
             </tbody>
