Add return to top button on desktop

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -34,10 +34,15 @@
     <br />
 
     @RenderBody()
+
+    <div id="return-to-top" hidden>
+        <label id="label">＾</label>
+    </div>
 </body>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="~/scipts/site.js"></script>
 
 @if (!string.IsNullOrEmpty(ViewBag.PersonaName))
 {
