--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
@@ -2,13 +2,13 @@
 
 <div>
     <h2 class="text-align-center">Books</h2>
-    <table class="col-md-8 col-md-offset-2 col-sm-12">
+    <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
                 <th class="col-md-1 text-align-center">Available</th>
                 <th class="col-md-2">Title</th>
                 <th>How to Obtain</th>
-                <th class="col-md-3 mobile-hidden">Effect</th>
+                <th class="mobile-hidden">Effect</th>
             </tr>
         </thead>
         <tbody>
@@ -28,7 +28,7 @@
 <div>
     <h2 class="text-align-center col-md-12">Book Order</h2>
     <h4 class="text-align-center col-md-12">This is the order of the books in the inventory, to make it easier to see which books you are missing.</h4>
-    <table class="col-md-2 col-md-offset-5 col-sm-12">
+    <table class="col-md-2 col-md-offset-5  col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
         @foreach (var bookOrder in Model.BookOrder)
         {
             <tr>
