--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
@@ -11,7 +11,7 @@
         var answers = GetAnswersByMonth(month);
         <div>
             <h3 class="text-align-center col-md-12">@month</h3>
-            <table class="col-md-8 col-md-offset-2 col-sm-12">
+            <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                 <thead>
                     <tr>
                         <th class="text-align-center col-md-1">Date</th>
