--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <h2 class="text-align-center">Lunches</h2>
-    <table class="col-md-4 col-md-offset-4 col-sm-12">
+    <table class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
         <thead>
             <tr>
                 <th class="slim-column text-align-center">Name</th>
