--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <h2 class="text-align-center">Quests</h2>
-    <table class="col-md-10 col-md-offset-1 col-sm-12">
+    <table class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
                 <th class="extra-slim-column text-align-center">Number</th>
