--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
@@ -11,7 +11,7 @@
 <div>
     <h3 class="text-align-center col-md-12">How to Obtain</h3>
     <h4 class="text-align-center col-md-8 col-md-offset-2">Skill cards are obtained via Shuffle Time. Shuffle time can occur at the end of a battle. If you get all the cards in the Shuffle Time you get a Sweep Bonus, a Sweep Bonus means you are guarenteed to get a Shuffle Time after the next battle. Each dungeon has a chance of dropping different skill card, by rank. This can be found below.</h4>
-    <table class="col-md-6 col-md-offset-3 col-sm-12">
+    <table class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
                 <th class="text-align-center slim-column">Dungeon</th>
@@ -36,7 +36,7 @@
         var skillCards = GetSkillCardsByType(type);
         <div>
             <h3 class="text-align-center col-md-12">@type</h3>
-            <table class="col-md-6 col-md-offset-3 col-sm-12">
+            <table class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                 <thead>
                     <tr>
                         <th class="text-align-center">Rank</th>
