--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
@@ -19,7 +19,7 @@
 
     <div>
         <h3 class="col-md-12 text-align-center">Info</h3>
-        <table class="col-md-8 col-md-offset-2 col-sm-12">
+        <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
                     <th class="text-align-center slim-column">HP</th>
@@ -41,7 +41,7 @@
 
     <div>
         <h3 class="col-md-12 text-align-center">Stats</h3>
-        <table class="col-md-8 col-md-offset-2 col-sm-12">
+        <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
                     <th class="text-align-center slim-column">Strength</th>
@@ -65,7 +65,7 @@
 
     <div>
         <h3 class="col-md-12 text-align-center">Elements</h3>
-        <table class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+        <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
                     <th class="text-align-center slim-column"><img src="~/img/Physical.png" alt="Physical" /></th>
@@ -93,7 +93,7 @@
 
     <div>
         <h3 class="col-md-12 text-align-center">Skills</h3>
-        <table class="col-md-8 col-md-offset-2 col-sm-12">
+        <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
                     <th class="col-md-2">Name</th>
