--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                 <li><a asp-controller="Persona" asp-action="Index">Personas</a></li>
                 <li><a asp-controller="App" asp-action="Skills">Skills</a></li>
                 <li><a asp-controller="App" asp-action="Books">Books</a></li>
+                <li><a asp-controller="App" asp-action="Weapons">Weapons</a></li>
                 <li><a asp-controller="App" asp-action="Armor">Armor</a></li>
                 <li><a asp-controller="App" asp-action="Accessories">Accessories</a></li>
                 <li><a asp-controller="App" asp-action="ExamAnswers">Exam Answers</a></li>
@@ -49,7 +50,7 @@
     <script src="~/scipts/personaCalculator.js"></script>
 }
 
-@if (ViewBag.Title == "Shadows" || ViewBag.Title == "Accessories" || ViewBag.Title == "Armor")
+@if (ViewBag.Title == "Shadows" || ViewBag.Title == "Accessories" || ViewBag.Title == "Armor" || ViewBag.Title == "Weapons")
 {
     <script src="~/scipts/mergedRowHighlightFix.js"></script>
 }
