Comment return to top button

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     @RenderBody()
 
     <div id="return-to-top" hidden>
-        <label id="label">＾</label>
+        <label id="label">＾</label> @* this is seperate so the font lines up correctly *@
     </div>
 </body>
 
