--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -31,6 +31,11 @@
                 <li><a href="https://github.com/AndyCrocker/Persona4GoldenHelper" target="_blank">Source Code</a></li>
             </ul>
         </div>
+
+        @if (ViewBag.HaveSearchBar != null && ViewBag.HaveSearchBar)
+        {
+            <input class="text-align-center col-md-4 col-md-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" type="text" placeholder="Search..." spellcheck="false" />
+        }
     </div>
     <br />
 
