--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Armor.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Armor.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div>
-    <h2 class="text-align-center">Armor</h2>
+    <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">Armor</h2>
     @foreach (var gender in genders)
     {
         var armors = GetArmorByGender(gender);
-        <h3 class="col-md-12 text-align-center">@gender</h3>
+        <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">@gender</h3>
         <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
