--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SourceListingViewModel
 
 <h2 class="text-align-center">About</h2>
-<div class="col-md-8 col-md-offset-2 text-align-center">
+<div class="text-align-center col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
     <p>Persona 4 Golden Helper is a personal project to bring all the important info to one place. The site is an ongoing project (Thus the grayed out nav bar pages) the site is also open source (Link in the nav bar to the far right), if you find any issues with the site please report them on the GitHub repo.</p>
     <br />
     <p>All the sources for the data collected on the site are linked below, with some areas I've obtained manually in game.</p>
