--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div>
-    <h2 class="text-align-center">Skill Cards</h2>
+    <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">Skill Cards</h2>
 </div>
 
 <div>
-    <h3 class="text-align-center col-md-12">How to Obtain</h3>
-    <h4 class="text-align-center col-md-8 col-md-offset-2">Skill cards are obtained via Shuffle Time. Shuffle time can occur at the end of a battle. If you get all the cards in the Shuffle Time you get a Sweep Bonus, a Sweep Bonus means you are guarenteed to get a Shuffle Time after the next battle. Each dungeon has a chance of dropping different skill card, by rank. This can be found below.</h4>
+    <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">How to Obtain</h3>
+    <h4 class="text-align-center col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-sm-offset-1">Skill cards are obtained via Shuffle Time. Shuffle time can occur at the end of a battle. If you get all the cards in the Shuffle Time you get a Sweep Bonus, a Sweep Bonus means you are guarenteed to get a Shuffle Time after the next battle. Each dungeon has a chance of dropping different skill card, by rank. This can be found below.</h4>
     <table class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
@@ -35,7 +35,7 @@
     {
         var skillCards = GetSkillCardsByType(type);
         <div>
-            <h3 class="text-align-center col-md-12">@type</h3>
+            <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">@type</h3>
             <table class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                 <thead>
                     <tr>
