--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SkillListingViewModel
 
 <div>
-    <h2 class="text-align-center">Skills</h2>
+    <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">Skills</h2>
     <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
