--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Weapons.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Weapons.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div>
-    <h2 class="text-align-center">Weapons</h2>
+    <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">Weapons</h2>
     @foreach (var character in characters)
     {
         var weapons = GetWeaponsByUser(character);
-        <h3 class="col-md-12 text-align-center">@character</h3>
+        <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">@character</h3>
         <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
