--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
@@ -7,7 +7,7 @@
 </div>
 
 <div>
-    <h2 class="col-md-12 text-align-center">
+    <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">
         @Model.Persona.Name (@Model.Persona.Level/@Model.Persona.Arcana)
         <span class="type-ultimate" @(Model.Persona.Ultimate ? "" : "hidden")>Ultimate</span>
         <span class="type-new-game" @(Model.Persona.NewGame ? "" : "hidden")>New Game+</span>
@@ -15,7 +15,7 @@
 </div>
 
 <div>
-    <h3 class="col-md-12 text-align-center">Stats</h3>
+    <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Stats</h3>
     <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
@@ -39,7 +39,7 @@
 </div>
 
 <div>
-    <h3 class="col-md-12 text-align-center">Elements</h3>
+    <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Elements</h3>
     <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
@@ -67,7 +67,7 @@
 </div>
 
 <div>
-    <h3 class="col-md-12 text-align-center">Skills</h3>
+    <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Skills</h3>
     <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <thead>
             <tr>
@@ -95,7 +95,7 @@
 </div>
 
 <div>
-    <h3 class="col-md-12 text-align-center">Recipes (<span id="recipe-count" class="text-dark">?</span>)</h3>
+    <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Recipes (<span id="recipe-count" class="text-dark">?</span>)</h3>
     <div id="recipe-scroll" class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
         <table id="recipe-table" class="col-md-12 col-sm-12 col-xs-12">
             <thead>
