--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Shadow.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ShadowViewModel
 
 <div>
-    <h2 class="col-md-12 text-align-center">
+    <h2 class="text-align-center col-md-12 col-sm-12 col-xs-12">
         @Model.Shadows[0].Name
         <span class="text-dark">(</span>
         <span class="type-normal" @(Model.Shadows.Where(shadow => shadow.Type.ToString() == "Normal").Any() ? "" : "hidden")>Normal</span>
@@ -14,11 +14,11 @@
 @foreach (var shadow in Model.Shadows)
 {
     <div>
-        <h2 class="type-@shadow.Type col-md-12 text-align-center">@(shadow.Type.ToString() == "MiniBoss" ? "Mini Boss" : shadow.Type.ToString()) <span class="text-bright">(@shadow.Level)</span></h2>
+        <h2 class="type-@shadow.Type text-align-center col-md-12 col-sm-12 col-xs-12">@(shadow.Type.ToString() == "MiniBoss" ? "Mini Boss" : shadow.Type.ToString()) <span class="text-bright">(@shadow.Level)</span></h2>
     </div>
 
     <div>
-        <h3 class="col-md-12 text-align-center">Info</h3>
+        <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Info</h3>
         <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-        <h3 class="col-md-12 text-align-center">Stats</h3>
+        <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Stats</h3>
         <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
@@ -64,7 +64,7 @@
     </div>
 
     <div>
-        <h3 class="col-md-12 text-align-center">Elements</h3>
+        <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Elements</h3>
         <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
@@ -92,7 +92,7 @@
     </div>
 
     <div>
-        <h3 class="col-md-12 text-align-center">Skills</h3>
+        <h3 class="text-align-center col-md-12 col-sm-12 col-xs-12">Skills</h3>
         <table class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
             <thead>
                 <tr>
