Correct css comment

--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -84,7 +84,7 @@
 }
 
 table {
-    padding: 0 !important; /* this was causing 2 big borders at either side of each tr */
+    padding: 0 !important; /* this was causing 2 big padding areas at either side of each tr */
 }
 
 /* Site wide tag styling */
