--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -112,6 +112,8 @@ input[type=text] {
     font-size: 20px;
     margin-bottom: 10px;
     margin-right: 100%;
+    box-shadow: 0 0 3px transparent;
+    transition: box-shadow .5s;
 }
 
     input[type=text]:focus {
@@ -163,6 +165,7 @@ table {
 
     table tr {
         background-color: #202020;
+        transition: background-color .25s;
     }
 
         table tr:hover, .hover-table-cell { /* hover-table-cell is applied in the 'mergeRowHightlightFix' to fix rowspan highlight issues */
@@ -234,7 +237,8 @@ table {
 
 /* Text colouring */
 .text-bright, a:link, a:visited {
-    color: #c5c1b9
+    color: #c5c1b9;
+    transition: all .5s;
 }
 
     a:link:hover {
